# pgr-tk

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build_no_agc.sh  wrapper.h
.github/workflows/: create_artifect_for_release.yml  rust.yml  test_and_build.yml
docker/: Dockerfile  Dockerfile.build-18.04  Dockerfile.build_env-20.04  Dockerfile.build_env-22.04  github-build.pub
docs/: .buildinfo  genindex.html  index.html  index.md  objects.inv  pgrlite.html  pgrtk.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  pgrlite.doctree  pgrtk.doctree
docs/_sources/: index.rst.txt  pgrlite.rst.txt
docs_src/: build.sh
docs_src/source/: conf.py  index.rst  pgrtk.rst
pgr-bin/: Cargo.toml  build.rs
pgr-bin/src/: lib.rs  main.rs
pgr-bin/src/_bin/: README.txt  pgr-fasta-smp-count.rs  pgr-filter.rs  pgr-multifilter.rs
pgr-bin/utility_scripts/: get_cytoband_to_json.py
pgr-db/: Cargo.toml  build.rs  tmp.fa
pgr-db/src/: agc_io.rs  aln.rs  bindings.rs  ec.rs  ext.rs  fasta_io.rs  frag_file_io.rs  gff_db.rs  graph_utils.rs  kmer_filter.rs  lib.rs  seq_db.rs  seqs2variants.rs  shmmrutils.rs
pgr-db/test/test_data/: consensus_test.fa  consensus_test2.fa  consensus_test3.fa  consensus_test4.fa  consensus_test5.fa  gen_frag_db.py  seq0  test.agc  test_hits  test_seqs_frag.frg  test_seqs_frag.mdb  test_seqs_frag.midx  test_seqs_frag.sdx
pgr-py/: Cargo.toml
pgr-py-lite/: Cargo.toml  Readme.md  build.txt
pgr-py-lite/examples/: generate_gfa_for_CMRG.py
pgr-py-lite/pgrlite/: __init__.py
pgr-py-lite/src/: lib.rs
pgr-py/pgr/: __init__.py
pgr-py/src/: lib.rs
pgr-server/: Cargo.toml
pgr-server/src/: bundle_processing.rs  lib.rs  main.rs
pgr-tk/: Cargo.toml  build.rs  build.txt
pgr-tk-workstation/: Dockerfile  Readme.md  build.sh  jupyterlab.sh
pgr-tk/examples/: get_variants.py
pgr-tk/pgrtk/: __init__.py
pgr-tk/src/: lib.rs
pgr-utils/: Cargo.toml
pgr-utils/src/: fasta_io.rs  gff_db.rs  lib.rs  multi_seqmap.rs  read_db.rs  sag.rs  seq_db.rs  seqmap.rs  seqs2variants.rs  shmmrutils.rs
pgr-utils/test/test_data/: seq1
pgr-web/: Cargo.toml  prod.sh  prod_no_agc.sh
pgr-web/frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.css  tailwind.css_
pgr-web/frontend/src/: main.rs
pgr-web/pgr-server/: Cargo.toml
pgr-web/pgr-server/src/: bundle_processing.rs  main.rs
pgr-web/scripts/: ROIs_examples.json  generare_ROIs.sh  get_ROIs.py
rs-libwfa2/: Cargo.toml  build.rs
rs-libwfa2/src/: lib.rs
rs-wfa/: .gitignore  .gitmodules  Cargo.toml  build.rs  build.txt  readme.md  rustfmt.toml  wrapper.h
rs-wfa/src/: affine_wavefront.rs  lib.rs  mm_allocator.rs  penalties.rs
rs-wfa/tests/: align.rs
src/: agc_io.rs  cseq_db.rs  fasta_io.rs  lib.rs  shmmrutils.rs
test/test_data/: gen_agc.sh  test_agc_ref.fa  test_agc_seqs.fa  test_rev.fa  test_seqs.fa
