[package]
name = "pgr-csdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
log = { version = "^0.4.5", features = ["std"] }
simple_logger = "1.11.0"
