[package]
name = "pgr-db"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.58.1"

[dependencies]
rustc-hash = "1.1.0"
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
log = { version = "^0.4.5", features = ["std"] }
simple_logger = "1.11.0"
rayon = "1.5.2"
libc = "0.2"
byteorder = "1.3.4"
petgraph = "0.6.1"
cuckoofilter = "0.5"
bgzip = "0.2.1"
serde = { version = "1.0.137", features = ["derive", "rc"] } 
serde_json = "1.0.81"
libwfa = { path="../rs-wfa/" }
regex = "1"
