[package]
name = "pgr"
version = "0.1.0"
authors = ["Jason Chin <cschin@infoecho.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pgr"
crate-type = ["rlib","cdylib"]

[features]
default = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.14.1" }
intervaltree = "0.2.6"
libc = "0.2"
memmap = "0.7.0"
rayon = "1.5.0"
rustc-hash = "1.1.0"
#libwfa = { git = "https://github.com/cschin/rs-wfa.git", branch="master" }
libwfa = { path="../rs-wfa/" }
peregrine-utils = { path = "../utils/" }
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
