[package]
name = "pgr-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intervaltree = "0.2.6"
libc = "0.2"
memmap = "0.7.0"
rustc-hash = "1.1.0"
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
threadpool = "1.8.1"
log = { version = "^0.4.5", features = ["std"] }
simple_logger = "1.11.0"
mimalloc = { version = "0.1.17", default-features = false }
rayon = "1.5.0"
petgraph = { git = "https://github.com/cschin/petgraph.git", branch = "fx_index_map" } # base on petgraph = "0.5.1"
#libwfa = { git = "https://github.com/cschin/rs-wfa.git", branch="master" }
libwfa = { path="../rs-wfa/" }
#rust-htslib = "0.38.2"
rust-htslib = { git="https://github.com/cschin/rust-htslib.git", branch = "aarch64" }
bgzip = "0.2.0"
regex = "1"
anyhow = "1.0.42"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive", "rc"] }
