[package]
name = "libwfa"
version = "0.1.2"
authors = ["Christian Fischer <christian@chfi.se>"]
edition = "2018"
license = "MIT"
description = "Bindings to the C implementation of the WFA alignment algorithm"
repository = "https://github.com/chfi/rs-wfa"
readme = "readme.md"
keywords = ["bioinformatics"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.58.1"
