[package]
name = "pgr-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.3.2", features = [] }
reqwest = { version = "0.11", features = ["json"] }
#tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.59"
rustc-hash = "1.1.0"
dioxus-web = "0.3.1"
wasm-logger = "0.2.0"
log = "0.4.17"
serde_qs = "0.12.0"
use = "0.0.0"
serde_with = "3.0.0"

[dependencies.web-sys]
version = "0.3.59"
features = ["console", 
            "Document", 
	    "DomTokenList", 
	    "Element", 
	    "HtmlSelectElement", 
	    "HtmlOptionsCollection"]
