[package]
name = "pgr-web"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0", features = [] }
reqwest = { version = "0.11", features = ["json"] }
ws_stream_wasm = "0.7.4"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.59"
rustc-hash = "1.1.0"
dioxus-web = "0.4.0"
wasm-logger = "0.2.0"
log = "0.4.17"
serde_qs = "0.12.0"
serde_with = "3.0.0"
url = "2.4.0"
getrandom = { version = "0.2", features = ["js"] }
pharos = "0.5"
wasm-bindgen = "0.2.86"
sledgehammer_bindgen = "0.2.2"
futures-util = "0.3.28"
futures-lite = "1.13.0"
itertools = "0.10.5"

[dependencies.web-sys]
version = "0.3.59"
features = ["console", 
            "Document", 
	    "DomTokenList", 
	    "Element", 
	    "HtmlSelectElement", 
	    "HtmlOptionsCollection"]
